gateway/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: external-gw
  #labels:
  #  name: test
